force-app/main/default/objects/AH_Salesforce_Trust_Config__mdt/AH_Salesforce_Trust_Config__mdt.object-meta.xml
<CustomObject>
    <label>AH Salesforce Trust Config</label>
    <pluralLabel>AH Salesforce Trust Configs</pluralLabel>
</CustomObject>