force-app/main/default/objects/AH_Salesforce_Trust_Config__mdt/fields/Sort_By_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_By_Field__c</fullName>
    <label>Sort By Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>